--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -1,4 +1,14 @@
 spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.database=mysql
+
+#Printa o sql usado no console
+spring.jpa.show-sql=true
+
+#Gerar as tabelas automaticamente
+spring.jpa.generate-ddl=true 
+
+#fica atualizando as tabela
+spring.jpa.hibernate.ddl-auto=create
