Adicionando novas classes, espositórios e implementações

--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.jpa.show-sql=true
 #Gerar as tabelas automaticamente
 spring.jpa.generate-ddl=true 
 
-#fica atualizando as tabela
+#fica recriando as tabela
 spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
