--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -49,6 +49,13 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
+		
+	
 	</dependencies>
 
 	<build>
