Adicionando o Flyway no projeto e criando a primeira migração

--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -4,13 +4,11 @@ spring.datasource.password=
 
 spring.jpa.database=mysql
 
-#Printa o sql usado no console
 spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=true 
 
-#Gerar as tabelas automaticamente
-spring.jpa.generate-ddl=true 
-
-#fica recriando as tabela
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
