--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -50,6 +50,10 @@
 			<scope>runtime</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+		</dependency>
 			</dependencies>
 
 	<build>
