Adicionando afterMigrate, script de migração no fliway e correções

--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -6,9 +6,15 @@ spring.jpa.database=mysql
 
 spring.jpa.show-sql=true
 #spring.jpa.generate-ddl=true 
-
 #spring.jpa.hibernate.ddl-auto=update
+
+
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.action=create 
+#spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/ddl.sql
+
+
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
+ #spring.flyway.locations=classpath:db/migration, classpath:db/testdata já faz auto
