--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 
  spring.flyway.locations=classpath:db/migration, classpath:db/testdata
+ 
+ spring.jackson.deserialization.fail-on-unknown-properties=true
+  spring.jackson.deserialization.fail-on-ignored-properties=true
