--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -86,6 +86,9 @@
 					</excludes>
 				</configuration>
 			</plugin>
+				<plugin>
+					<artifactId>maven-failsafe-plugin</artifactId>
+				</plugin>
 		</plugins>
 	</build>
 
