--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -67,7 +67,11 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
-		
+		<dependency>
+			<groupId>io.rest-assured</groupId>
+			<artifactId>rest-assured</artifactId>
+			<scope>test</scope>
+		</dependency>
 		
 		
 			</dependencies>
