--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
  spring.flyway.locations=classpath:db/migration, classpath:db/testdata
  
- spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
  spring.jackson.deserialization.fail-on-ignored-properties=true
  
 spring.mvc.throw-exception-if-no-handler-found=true
-spring.resources.add-mappings=false
+spring.web.resources.add-mappings=false
