--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -17,6 +17,7 @@
 	<description>API de delivery de comida</description>
 	<properties>
 		<java.version>11</java.version>
+		 <squiggly.version>1.3.18</squiggly.version>
 	</properties>
 	<dependencies>
 		<dependency> 
@@ -78,6 +79,12 @@
 		  <artifactId>modelmapper</artifactId>
 		  <version>3.0.0</version>
 	    </dependency>
+	    
+	    <dependency>
+	    <groupId>com.github.bohnman</groupId>
+	    <artifactId>squiggly-filter-jackson</artifactId>
+	    <version>${squiggly.version}</version>
+		</dependency>
 	    
 		
 			</dependencies>
