--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -19,5 +19,6 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
-algafood.storage.local.deretorio-fotos=/Users/Vincius/Desktop/upload
+algafood.storage.local.diretorio-fotos=/Users/Vincius/Desktop/upload
 
+spring.servlet.multipart.max-file-size=50MB
