Criando bean de propriedades de configuração dos serviços de storage

--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -21,4 +21,19 @@ spring.web.resources.add-mappings=false
 
 algafood.storage.local.diretorio-fotos=/Users/Vincius/Desktop/upload
 
+# Propriedades da nuvem s3 aws
+#algafood.storage.s3.id-chave-acesso=
+#algafood.storage.s3.id-chave-acesso-secreta=
+algafood.storage.s3.bucket=algafood-teste2
+algafood.storage.s3.regiao=us-east-1
+algafood.storage.s3.diretorio-fotos=catalogo
+
+
+
+
+
+
+
+
+
 spring.servlet.multipart.max-file-size=50MB
