--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -99,7 +99,6 @@
 		  <version>${jasperreports.version}</version>
 		</dependency>
 	    
-		
 			<dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>
@@ -107,6 +106,13 @@
 				</artifactId>
 				<optional>true</optional>
 			</dependency>
+			
+				<dependency>
+			  <groupId>com.amazonaws</groupId>
+			  <artifactId>aws-java-sdk-s3</artifactId>
+			  <version>1.12.155</version>
+			</dependency>
+			
 	</dependencies>
 
 	<build>
