Implementando a inclusão de objetos no bucket da Amazon S3

--- a/algafood-api/algafood-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/algafood-api/algafood-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -23,5 +23,20 @@
     "name": "algafood.storage.s3.id-chave-acesso-secreta",
     "type": "java.lang.String",
     "description": "A description for 'algafood.storage.s3.id-chave-acesso-secreta'"
+  },
+  {
+    "name": "algafood.storage.local.diretorio-fotos",
+    "type": "java.lang.String",
+    "description": "A description for 'algafood.storage.local.diretorio-fotos'"
+  },
+  {
+    "name": "algafood.storage.s3.chave-acesso-secreta",
+    "type": "java.lang.String",
+    "description": "A description for 'algafood.storage.s3.chave-acesso-secreta'"
+  },
+  {
+    "name": "algafood.storage.s3.chave-acesso-secreta",
+    "type": "java.lang.String",
+    "description": "A description for 'algafood.storage.s3.chave-acesso-secreta'"
   }
 ]}
