--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -99,18 +99,16 @@
 		  <version>${jasperreports.version}</version>
 		</dependency>
 	    
-			<dependency>
+				<dependency>
 				<groupId>org.springframework.boot</groupId>
-				<artifactId>
-					spring-boot-configuration-processor
-				</artifactId>
+				<artifactId>spring-boot-configuration-processor</artifactId>
 				<optional>true</optional>
-			</dependency>
+				</dependency>
 			
 				<dependency>
 			  <groupId>com.amazonaws</groupId>
 			  <artifactId>aws-java-sdk-s3</artifactId>
-			  <version>1.12.155</version>
+			  <version>1.11.671</version>
 			</dependency>
 			
 	</dependencies>
