Selecionando a implementação do serviço de storage de fotos

--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -19,7 +19,10 @@ spring.jackson.deserialization.fail-on-ignored-properties=true
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
 
+
 algafood.storage.local.diretorio-fotos=/Users/Vincius/Desktop/upload
+
+algafood.storage.tipo=local
 
 # Propriedades da nuvem s3 aws
 #algafood.storage.s3.id-chave-acesso=
