--- a/algafood-api/algafood-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/algafood-api/algafood-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -38,5 +38,10 @@
     "name": "algafood.storage.s3.chave-acesso-secreta",
     "type": "java.lang.String",
     "description": "A description for 'algafood.storage.s3.chave-acesso-secreta'"
+  },
+  {
+    "name": "algafood.storage.tipo",
+    "type": "java.lang.String",
+    "description": "A description for 'algafood.storage.tipo'"
   }
 ]}
