--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
-
 spring.jpa.database=mysql
 
 spring.jpa.show-sql=true
@@ -10,8 +9,7 @@ spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-
- spring.flyway.locations=classpath:db/migration, classpath:db/testdata
+spring.flyway.locations=classpath:db/migration, classpath:db/testdata
  
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
@@ -21,7 +19,6 @@ spring.web.resources.add-mappings=false
 
 
 algafood.storage.local.diretorio-fotos=/Users/Vincius/Desktop/upload
-
 algafood.storage.tipo=local
 
 # Propriedades da nuvem s3 aws
@@ -31,8 +28,13 @@ algafood.storage.s3.bucket=algafood-teste2
 algafood.storage.s3.regiao=us-east-1
 algafood.storage.s3.diretorio-fotos=catalogo
 
+#Configurações para envio de e-mail
+spring.mail.host=smtp.sendgrid.net
+spring.mail.port=587
+spring.mail.username=apikey
+#spring.mail.password=
 
-
+algafood.email.remetente=marcusvini3701@gmail.com
 
 
 spring.servlet.multipart.max-file-size=50MB
