--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -33,8 +33,8 @@ spring.mail.host=smtp.sendgrid.net
 spring.mail.port=587
 spring.mail.username=apikey
 #spring.mail.password=
-
 algafood.email.remetente=marcusvini3701@gmail.com
 
+spring.freemarker.settings.locale=pt_BR
 
 spring.servlet.multipart.max-file-size=50MB
