implementando serviço de envio de e-mail fake

--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -36,5 +36,6 @@ spring.mail.username=apikey
 algafood.email.remetente=marcusvini3701@gmail.com
 
 spring.freemarker.settings.locale=pt_BR
+algafood.email.impl=fake
 
 spring.servlet.multipart.max-file-size=50MB
