Publicando Domain Events a partir do Aggregate Root

--- a/algafood-api/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/algafood-api/src/main/resources/application.properties
@@ -36,6 +36,7 @@ spring.mail.username=apikey
 algafood.email.remetente=marcusvini3701@gmail.com
 
 spring.freemarker.settings.locale=pt_BR
-algafood.email.impl=fake
+algafood.email.impl=sandbox
+algafood.email.sandbox.destinatario=marcusvini370@gmail.com
 
 spring.servlet.multipart.max-file-size=50MB
