--- a/algafood-api/algafood-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/algafood-api/algafood-api/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -43,5 +43,10 @@
     "name": "algafood.storage.tipo",
     "type": "java.lang.String",
     "description": "A description for 'algafood.storage.tipo'"
+  },
+  {
+    "name": "algafood.email.sandbox.destinatario",
+    "type": "java.lang.String",
+    "description": "A description for 'algafood.email.sandbox.destinatario'"
   }
 ]}
