--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -19,6 +19,7 @@
 		<java.version>11</java.version>
 		 <squiggly.version>1.3.18</squiggly.version>
 		 <jasperreports.version>6.18.1</jasperreports.version>
+		 <springfox.version>3.0.0</springfox.version>
 	</properties>
 	<dependencies>
 		<dependency> 
@@ -119,6 +120,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
+		
+			<dependency>
+		    <groupId>io.springfox</groupId>
+		    <artifactId>springfox-boot-starter</artifactId>
+		    <version>${springfox.version}</version>
+			</dependency>
+		
 	</dependencies>
 
 	<build>
