--- a/algafood-api/algafood-api/pom.xml
+++ b/algafood-api/algafood-api/pom.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>     
-	  
+	<parent>
+
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.5.5</version>
-		<relativePath/> <!-- lookup parent from repository -->
-		
+		<relativePath /> <!-- lookup parent from repository -->
+
 	</parent>
 	<groupId>com.br</groupId>
 	<artifactId>algafood-api</artifactId>
@@ -17,12 +18,12 @@
 	<description>API de delivery de comida</description>
 	<properties>
 		<java.version>11</java.version>
-		 <squiggly.version>1.3.18</squiggly.version>
-		 <jasperreports.version>6.18.1</jasperreports.version>
-		 <springfox.version>3.0.0</springfox.version>
+		<squiggly.version>1.3.18</squiggly.version>
+		<jasperreports.version>6.18.1</jasperreports.version>
+		<springfox.version>3.0.0</springfox.version>
 	</properties>
 	<dependencies>
-		<dependency> 
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -54,17 +55,17 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.flywaydb</groupId>
 			<artifactId>flyway-core</artifactId>
 		</dependency>
-		
-		 <dependency>
-    	<groupId>org.apache.commons</groupId>
-    	<artifactId>commons-lang3</artifactId>
-    </dependency>
-		
+
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
@@ -75,43 +76,43 @@
 			<artifactId>rest-assured</artifactId>
 			<scope>test</scope>
 		</dependency>
-		
+
 		<dependency>
-		  <groupId>org.modelmapper</groupId>
-		  <artifactId>modelmapper</artifactId>
-		  <version>3.0.0</version>
-	    </dependency>
-	    
-	    <dependency>
-	    <groupId>com.github.bohnman</groupId>
-	    <artifactId>squiggly-filter-jackson</artifactId>
-	    <version>${squiggly.version}</version>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.0.0</version>
 		</dependency>
-		
-			<dependency>
-		  <groupId>net.sf.jasperreports</groupId>
-		  <artifactId>jasperreports</artifactId>
-		  <version>${jasperreports.version}</version>
+
+		<dependency>
+			<groupId>com.github.bohnman</groupId>
+			<artifactId>squiggly-filter-jackson</artifactId>
+			<version>${squiggly.version}</version>
 		</dependency>
-		
-			<dependency>
-		  <groupId>net.sf.jasperreports</groupId>
-		  <artifactId>jasperreports-functions</artifactId>
-		  <version>${jasperreports.version}</version>
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>${jasperreports.version}</version>
 		</dependency>
-	    
-				<dependency>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-configuration-processor</artifactId>
-				<optional>true</optional>
-				</dependency>
-			
-				<dependency>
-			  <groupId>com.amazonaws</groupId>
-			  <artifactId>aws-java-sdk-s3</artifactId>
-			  <version>1.11.671</version>
-			</dependency>
-			
+
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports-functions</artifactId>
+			<version>${jasperreports.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.11.671</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
@@ -120,13 +121,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
 		</dependency>
-		
-			<dependency>
-		    <groupId>io.springfox</groupId>
-		    <artifactId>springfox-boot-starter</artifactId>
-		    <version>${springfox.version}</version>
-			</dependency>
-		
+
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-boot-starter</artifactId>
+			<version>${springfox.version}</version>
+		</dependency>
+
+
+
 	</dependencies>
 
 	<build>
@@ -143,9 +146,9 @@
 					</excludes>
 				</configuration>
 			</plugin>
-				<plugin>
-					<artifactId>maven-failsafe-plugin</artifactId>
-				</plugin>
+			<plugin>
+				<artifactId>maven-failsafe-plugin</artifactId>
+			</plugin>
 		</plugins>
 	</build>
 
