--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/algafood
 spring.datasource.username=root
 spring.datasource.password=admin
 spring.jpa.database=mysql
@@ -6,7 +7,7 @@ spring.jpa.show-sql=true
 
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 
-#spring.jpa.generate-ddl=true 
+#spring.jpa.generate-ddl=true
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
