Adicionando segurança na API com Spring Security

--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -44,5 +44,8 @@ algafood.email.sandbox.destinatario=marcusvini370@gmail.com
 
 spring.servlet.multipart.max-file-size=50MB
 
+spring.security.user.name=algafood
+spring.security.user.password=12345
+
 
 
