Configurando o Resource Server com a nova stack do Spring Security

--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -44,5 +44,9 @@ algafood.email.sandbox.destinatario=marcusvini370@gmail.com
 
 spring.servlet.multipart.max-file-size=50MB
 
+spring.security.oauth2.resourceserver.opaquetoken.introspection-uri=http://localhost:8081/oauth/check_token
+spring.security.oauth2.resourceserver.opaquetoken.client-id=checktoken
+spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
+
 
 
