--- a/algafood-api/pom.xml
+++ b/algafood-api/pom.xml
@@ -155,6 +155,17 @@
             <artifactId>spring-security-test</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.nimbusds</groupId>
+            <artifactId>oauth2-oidc-sdk</artifactId>
+            <version>9.43</version>
+        </dependency>
+
     </dependencies>
 
     <build>
