--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -48,6 +48,9 @@ spring.servlet.multipart.max-file-size=50MB
 #spring.security.oauth2.resourceserver.opaquetoken.client-secret=check123
 
 spring.security.oauth2.resourceserver.jwt.public-key-location=classpath:keys/algafood-pkey.pem
+algafood.jwt.keystore.jks-location=classpath:keys/algafood.jks
+algafood.jwt.keystore.password=123456
+algafood.jwt.keystore.keypair-alias=algafood
 
 
 
