--- a/algafood-api/pom.xml
+++ b/algafood-api/pom.xml
@@ -179,6 +179,11 @@
             <version>${spring-security-oauth2.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
