--- a/algafood-api/pom.xml
+++ b/algafood-api/pom.xml
@@ -22,6 +22,7 @@
         <jasperreports.version>6.18.1</jasperreports.version>
         <springfox.version>3.0.0</springfox.version>
         <spring-security-oauth2.version>2.3.8.RELEASE</spring-security-oauth2.version>
+<!--        <dockerfile-maven-version>1.14.13</dockerfile-maven-version>-->
     </properties>
     <dependencies>
         <dependency>
@@ -214,5 +215,35 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>docker</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>com.spotify</groupId>
+                        <artifactId>dockerfile-maven-plugin</artifactId>
+                        <version>1.4.13</version>
+                        <executions>
+                            <execution>
+                                <id>default</id>
+                                <goals>
+                                    <goal>build</goal>
+                                    <goal>push</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <repository>algafood-api</repository>
+                            <buildArgs>
+                                <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
 </project>
