--- a/algafood-api/docker-compose.yml
+++ b/algafood-api/docker-compose.yml
@@ -19,9 +19,17 @@ services:
     command: ["/wait-for-it.sh", "algafood-mysql:3307", "-t", "30", "--", "java", "-jar", "api.jar"]
     environment:
       DB_HOST: algafood-mysql
-    ports:
-      - "8080:8080"
     networks:
       - algafood-network
     depends_on:
       - algafood-mysql
+
+  algafood-proxy:
+    build: ./nginx
+    image: algafood-proxy
+    ports:
+      - "80:80"
+    networks:
+      - algafood-network
+    depends_on:
+      - algafood-api
