--- a/algafood-api/docker-compose.yml
+++ b/algafood-api/docker-compose.yml
@@ -14,11 +14,18 @@ services:
     networks:
       - algafood-network
 
+  algafood-redis:
+    image: redis:7.0.5-alpine
+    networks:
+      - algafood-network
+
   algafood-api:
     image: algafood-api
     command: ["/wait-for-it.sh", "algafood-mysql:3307", "-t", "30", "--", "java", "-jar", "api.jar"]
     environment:
       DB_HOST: algafood-mysql
+      SPRING_SESSION_STORE_TYPE: redis
+      SPRING_REDIS_HOST: algafood-redis
     networks:
       - algafood-network
     depends_on:
