--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -11,6 +11,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.flyway.locations=classpath:db/migration, classpath:db/testdata
 
+#session do redis
+spring.session.store-type=none
+
 spring.jackson.deserialization.fail-on-unknown-properties=true
 spring.jackson.deserialization.fail-on-ignored-properties=true
 
@@ -53,5 +56,5 @@ algafood.jwt.keystore.password=123456
 algafood.jwt.keystore.keypair-alias=algafood
 
 
-g
+
 
