--- a/algafood-api/src/main/resources/flyway.properties
+++ b/algafood-api/src/main/resources/flyway.properties
@@ -1,3 +1,3 @@
 flyway.url=jdbc:mysql://${DB_HOST:localhost}/algafood?createDatabaseIfNotExist=true&serverTimezone=UTC
 flyway.user=root
-flyway.password=
+flyway.password=admin
