Dependência de JavaMailSender não satisfeita: melhorando o uso da herança

--- a/algafood-api/src/main/resources/application-development.properties
+++ b/algafood-api/src/main/resources/application-development.properties
@@ -1,6 +1,6 @@
 # Database
 spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.password=
 spring.jpa.show-sql=true
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
@@ -16,3 +16,4 @@ algafood.storage.local.diretorio-fotos=/Users/Vincius/Desktop/upload
 # Email
 algafood.email.impl=fake
 algafood.email.remetente=marcusvini3701@gmail.com
+
