atualizando o sprin secuity antigo que foi descontinuado

--- a/algafood-api/src/main/resources/application.properties
+++ b/algafood-api/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.freemarker.settings.locale=pt_BR
 
 spring.servlet.multipart.max-file-size=50MB
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/oauth2/jwks
 
 springdoc.packages-to-scan=com.algafood.api
 springdoc.paths-to-match=/v1/**
@@ -34,3 +34,5 @@ springdoc.swagger-ui.oauth.client-id=algafood-web
 springdoc.swagger-ui.oauth.client-secret=web123
 
 springdoc.swagger-ui.oauth.use-pkce-with-authorization-code-grant=true
+
+spring.main.allow-bean-definition-overriding=true
