--- a/algafood-api/pom.xml
+++ b/algafood-api/pom.xml
@@ -21,8 +21,8 @@
         <squiggly.version>1.3.18</squiggly.version>
         <jasperreports.version>6.18.1</jasperreports.version>
         <springdoc.version>1.6.9</springdoc.version>
-        <spring-security-oauth2.version>2.3.8.RELEASE</spring-security-oauth2.version>
-<!--        <dockerfile-maven-version>1.14.13</dockerfile-maven-version>-->
+        <springauthserver.version>0.3.1</springauthserver.version>
+        <!--        <dockerfile-maven-version>1.14.13</dockerfile-maven-version>-->
     </properties>
     <dependencies>
         <dependency>
@@ -163,6 +163,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-authorization-server</artifactId>
+            <version>${springauthserver.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
         </dependency>
@@ -173,17 +179,7 @@
             <version>9.43</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-jwt</artifactId>
-            <version>1.1.1.RELEASE</version>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>${spring-security-oauth2.version}</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
