--- a/algafood-api/src/main/resources/application-development.properties
+++ b/algafood-api/src/main/resources/application-development.properties
@@ -9,6 +9,13 @@ algafood.jwt.keystore.jks-location=base64:MIIKqQIBAzCCCmIGCSqGSIb3DQEHAaCCClMEgg
 algafood.jwt.keystore.password=123456
 algafood.jwt.keystore.keypair-alias=algafood
 
+algafood.auth.provider-url=http://localhost:8080
+
+#Resource Server Opaque Token
+spring.security.oauth2.resourceserver.opaque-token.introspection-uri=http://localhost:8080/oauth2/introspect
+spring.security.oauth2.resourceserver.opaque-token.client-id=algafood-backend
+spring.security.oauth2.resourceserver.opaque-token.client-secret=backend123
+
 # Storage
 algafood.storage.tipo=local
 algafood.storage.local.diretorio-fotos=/Users/Vincius/Desktop/upload
